sql injection test

--- a/php/application/skins/css/base.css
+++ b/php/application/skins/css/base.css
@@ -463,6 +463,7 @@ display: inline-block;
 }
 
 .veiling{
+    height: 302px;
 	width:90%;
 	border:1px solid #f1efef;
 	box-shadow: 10px,10px,10px,10px;
